version/0.52/_sources/examples/00-read_binary/pontoon.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-read_binary/pontoon.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_00-read_binary_pontoon.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-read_binary_pontoon.py:


.. _ref_pontoon:

Shell Static Analysis
~~~~~~~~~~~~~~~~~~~~~

Visualize a shell static analysis

.. GENERATED FROM PYTHON SOURCE LINES 9-14

.. code-block:: default

    # download the pontoon example
    from ansys.mapdl.reader import examples

    pontoon = examples.download_pontoon()








.. GENERATED FROM PYTHON SOURCE LINES 15-16

Print the pontoon result

.. GENERATED FROM PYTHON SOURCE LINES 16-18

.. code-block:: default

    print(pontoon)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    PyMAPDL Result
    Title       : CASE  1001  'H =  1.0  T =  62.8  D =  -0.0  P =   0.0'
    Units       : User Defined
    Version     : 19.3
    Cyclic      : False
    Result Sets : 1
    Nodes       : 8765
    Elements    : 8640


    Available Results:
    EMS : Miscellaneous summable items (normally includes face pressures)
    ENF : Nodal forces
    ENS : Nodal stresses
    ENG : Element energies and volume
    EEL : Nodal elastic strains
    ETH : Nodal thermal strains (includes swelling strains)
    EUL : Element euler angles
    EPT : Nodal temperatures
    NSL : Nodal displacements
    RF  : Nodal reaction forces





.. GENERATED FROM PYTHON SOURCE LINES 19-20

Plot the nodal displacement

.. GENERATED FROM PYTHON SOURCE LINES 20-23

.. code-block:: default

    pontoon.plot_nodal_solution(0, show_displacement=True, displacement_factor=100000)





.. image-sg:: /examples/00-read_binary/images/sphx_glr_pontoon_001.png
   :alt: pontoon
   :srcset: /examples/00-read_binary/images/sphx_glr_pontoon_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 24-25

print the available result types

.. GENERATED FROM PYTHON SOURCE LINES 25-28

.. code-block:: default

    pontoon.available_results






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Available Results:
    EMS : Miscellaneous summable items (normally includes face pressures)
    ENF : Nodal forces
    ENS : Nodal stresses
    ENG : Element energies and volume
    EEL : Nodal elastic strains
    ETH : Nodal thermal strains (includes swelling strains)
    EUL : Element euler angles
    EPT : Nodal temperatures
    NSL : Nodal displacements
    RF  : Nodal reaction forces




.. GENERATED FROM PYTHON SOURCE LINES 29-30

Plot the shell elements

.. GENERATED FROM PYTHON SOURCE LINES 30-32

.. code-block:: default

    pontoon.plot()




.. image-sg:: /examples/00-read_binary/images/sphx_glr_pontoon_002.png
   :alt: pontoon
   :srcset: /examples/00-read_binary/images/sphx_glr_pontoon_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 33-34

Plot the elastic strain and show exaggerated displacement

.. GENERATED FROM PYTHON SOURCE LINES 34-45

.. code-block:: default

    pontoon.plot_nodal_elastic_strain(
        0,
        "eqv",
        show_displacement=True,
        displacement_factor=100000,
        overlay_wireframe=True,
        lighting=False,
        add_text=False,
        show_edges=True,
    )
    # Note: lighting is disabled here as it's too dark



.. image-sg:: /examples/00-read_binary/images/sphx_glr_pontoon_003.png
   :alt: pontoon
   :srcset: /examples/00-read_binary/images/sphx_glr_pontoon_003.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.181 seconds)


.. _sphx_glr_download_examples_00-read_binary_pontoon.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: pontoon.py <pontoon.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: pontoon.ipynb <pontoon.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
