version/0.56/_sources/examples/00-read_binary/pontoon.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-read_binary/pontoon.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_00-read_binary_pontoon.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-read_binary_pontoon.py:


.. _ref_pontoon:

Shell Static Analysis
~~~~~~~~~~~~~~~~~~~~~

Visualize a shell static analysis

.. GENERATED FROM PYTHON SOURCE LINES 31-37

.. code-block:: Python


    # download the pontoon example
    from ansys.mapdl.reader import examples

    pontoon = examples.download_pontoon()








.. GENERATED FROM PYTHON SOURCE LINES 38-39

Print the pontoon result

.. GENERATED FROM PYTHON SOURCE LINES 39-41

.. code-block:: Python

    print(pontoon)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    PyMAPDL Result
    Title       : CASE  1001  'H =  1.0  T =  62.8  D =  -0.0  P =   0.0'
    Units       : User Defined
    Version     : 19.3
    Cyclic      : False
    Result Sets : 1
    Nodes       : 8765
    Elements    : 8640


    Available Results:
    EMS : Miscellaneous summable items (normally includes face pressures)
    ENF : Nodal forces
    ENS : Nodal stresses
    ENG : Element energies and volume
    EEL : Nodal elastic strains
    ETH : Nodal thermal strains (includes swelling strains)
    EUL : Element euler angles
    EPT : Nodal temperatures
    NSL : Nodal displacements
    RF  : Nodal reaction forces





.. GENERATED FROM PYTHON SOURCE LINES 42-43

Plot the nodal displacement

.. GENERATED FROM PYTHON SOURCE LINES 43-46

.. code-block:: Python

    pontoon.plot_nodal_solution(0, show_displacement=True, displacement_factor=100000)





.. image-sg:: /examples/00-read_binary/images/sphx_glr_pontoon_001.png
   :alt: pontoon
   :srcset: /examples/00-read_binary/images/sphx_glr_pontoon_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/pymapdl-reader/pymapdl-reader/.venv/lib/python3.14/site-packages/ansys/mapdl/reader/rst.py:3044: PyVistaFutureWarning: The default value of `algorithm` for the filter
    `UnstructuredGrid.extract_surface` will change in the future. It currently defaults to
    `'dataset_surface'`, but will change to `None`. Explicitly set the `algorithm` keyword to
    silence this warning.
      mesh = grid.extract_surface()




.. GENERATED FROM PYTHON SOURCE LINES 47-48

print the available result types

.. GENERATED FROM PYTHON SOURCE LINES 48-51

.. code-block:: Python

    pontoon.available_results






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Available Results:
    EMS : Miscellaneous summable items (normally includes face pressures)
    ENF : Nodal forces
    ENS : Nodal stresses
    ENG : Element energies and volume
    EEL : Nodal elastic strains
    ETH : Nodal thermal strains (includes swelling strains)
    EUL : Element euler angles
    EPT : Nodal temperatures
    NSL : Nodal displacements
    RF  : Nodal reaction forces




.. GENERATED FROM PYTHON SOURCE LINES 52-53

Plot the shell elements

.. GENERATED FROM PYTHON SOURCE LINES 53-55

.. code-block:: Python

    pontoon.plot()




.. image-sg:: /examples/00-read_binary/images/sphx_glr_pontoon_002.png
   :alt: pontoon
   :srcset: /examples/00-read_binary/images/sphx_glr_pontoon_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/pymapdl-reader/pymapdl-reader/.venv/lib/python3.14/site-packages/ansys/mapdl/reader/rst.py:3044: PyVistaFutureWarning: The default value of `algorithm` for the filter
    `UnstructuredGrid.extract_surface` will change in the future. It currently defaults to
    `'dataset_surface'`, but will change to `None`. Explicitly set the `algorithm` keyword to
    silence this warning.
      mesh = grid.extract_surface()




.. GENERATED FROM PYTHON SOURCE LINES 56-57

Plot the elastic strain and show exaggerated displacement

.. GENERATED FROM PYTHON SOURCE LINES 57-68

.. code-block:: Python

    pontoon.plot_nodal_elastic_strain(
        0,
        "eqv",
        show_displacement=True,
        displacement_factor=100000,
        overlay_wireframe=True,
        lighting=False,
        add_text=False,
        show_edges=True,
    )
    # Note: lighting is disabled here as it's too dark



.. image-sg:: /examples/00-read_binary/images/sphx_glr_pontoon_003.png
   :alt: pontoon
   :srcset: /examples/00-read_binary/images/sphx_glr_pontoon_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/pymapdl-reader/pymapdl-reader/.venv/lib/python3.14/site-packages/ansys/mapdl/reader/rst.py:3044: PyVistaFutureWarning: The default value of `algorithm` for the filter
    `UnstructuredGrid.extract_surface` will change in the future. It currently defaults to
    `'dataset_surface'`, but will change to `None`. Explicitly set the `algorithm` keyword to
    silence this warning.
      mesh = grid.extract_surface()





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.647 seconds)


.. _sphx_glr_download_examples_00-read_binary_pontoon.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: pontoon.ipynb <pontoon.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: pontoon.py <pontoon.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: pontoon.zip <pontoon.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
